# Mathify

./: .gitignore  CMakeLists.txt  GRAMMAR.md  README.md
frontend/: front.c
include/mathify/: arena.h  mathify.h  string.h
src/: arena.c  io.c  io.h  mathify.c  string.c
